@@ -45,6 +45,7 @@
 	* avrftdi_tpi.c: Do all I/O in terms of pgm->cmd_tpi()-calls instead of
 	avrftdi_tpi_[read,write]_byte().
 	Remove unnecessary set_pin call to set MOSI high, speeds up I/O.
+	* avr.c: Adds avr_tpi_chip_erase() generic TPI chip erase function.
 
 2013-05-02  Hannes Weisbach <hannes_weisbach@gmx.net>
 
